--- a/styles.css
+++ b/styles.css
@@ -4,9 +4,18 @@ body {
 h1 {
   color: blue;
   text-align: center;
-  margin: 25px 50px;
+  margin: 5px 50px;
+}
+h2 {
+margin: 5px 50px;
+}
+h3 {
+margin: 5px 50px;
+}
+h4 {
+margin: 5px 50px;
 }
 p {
   color: red;
-  margin: 25px 50px;
+  margin: 5px 50px;
 }
